prelim costs writeup

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -259,7 +259,73 @@ Inhibit the New Product}
 \subsection{Planning of the Development Phases}
 \lips
 
+
+
 \section{Costs}
+Developing and implementing the requirements for the OKKM Insights platform involves various financial and effort-related expenditures. 
+    Below is a detailed breakdown of the primary cost components associated with building the platform:
+
+\subsection{Development Costs}
+\subsubsection{Software Development}
+\begin{enumerate}
+    \item Front-End Development: Creating a user-friendly web interface requires experience working with front-end technologies such as HTML, CSS, JavaScript, and frameworks like React or Angular.
+    \item Back-End Development: Developing robust server-side infrastructure using technologies like Node.js, Flask, and Python. This includes setting up databases, APIs, and integrating with cloud services (AWS/Azure).
+    \item AI and Machine Learning Integration: Building and integrating AI-powered features for automatic data labeling and computer vision model training will require specialized expertise in machine learning, potentially increasing development costs.
+  \end{enumerate}
+\subsubsection{UI/UX Design}
+\begin{enumerate}
+  \item Investing time into UI/UX design to ensure the platform is intuitive and easy to use for both data labelers and end clients. This includes designing workflows, views, and ensuring responsive design across devices.
+  \end{enumerate}
+  \subsubsection{Testing and Quality Assurance}
+\begin{enumerate}
+  \item Comprehensive testing to identify and fix bugs, ensure cross-platform compatibility, and maintain high system reliability. This involves both automated and manual testing processes.
+  \end{enumerate}
+\subsection{Infrastructure Costs}
+\subsubsection{Cloud Services}
+\begin{enumerate}
+  \item Hosting: Utilizing cloud platforms like AWS or Azure for hosting the backend services and databases. Costs will scale with usage, including storage for satellite images, computational resources for AI processing, and data transfer fees.
+  \item Scalability: Ensuring the infrastructure can scale to handle increasing numbers of users and data volume, which may involve additional costs for load balancing, auto-scaling, and enhanced security measures.
+  \end{enumerate}
+\subsubsection{Data Acquisition}
+\begin{enumerate}
+  \item Purchasing high-quality, commercially available satellite images from third-party providers. These costs can vary based on the resolution, coverage area, and frequency of image updates required for different use cases.
+  \end{enumerate}
+\subsection{Operational Costs}
+\subsubsection{User Compensation}
+\begin{enumerate}
+  \item Labeling Incentives: Allocating funds to compensate users who contribute to the image labeling process. This includes setting competitive rates to attract and retain a large and active user base.
+  \item Payment Processing Fees: Costs associated with handling financial transactions, including fees from payment gateways for distributing earnings to users and receiving payments from clients.
+  \end{enumerate}
+\subsubsection{Maintenance and Support}
+\begin{enumerate}
+  \item Ongoing maintenance of the platform to ensure uptime, implement updates, and address technical issues. This also includes providing customer support to both data labelers and end clients.
+  \end{enumerate}
+\subsubsection{Security and Compliance}
+\begin{enumerate}
+  \item Implementing robust security measures to protect sensitive satellite data and financial transactions. Costs may include encryption technologies, regular security audits, and compliance with data protection regulations.
+  \end{enumerate}
+
+\subsection{Marketing and User Acquisition Costs}
+\subsubsection{Promotional Activities}
+\begin{enumerate}
+  \item Marketing efforts to attract both data labelers and end clients to the platform. This includes digital marketing campaigns, partnerships with relevant organizations, and participation in industry events.
+  \end{enumerate}
+\subsubsection{Onboarding and Training}
+\begin{enumerate}
+  \item Creating tutorials, documentation, and training materials to facilitate easy onboarding of new users and ensure they can effectively contribute to the labeling process with minimal friction.
+  \end{enumerate}
+
+\subsection{Contingency and Miscellaneous Costs}
+\subsubsection{Unexpected Expenses}
+\begin{enumerate}
+  \item Allocating a budget for unforeseen challenges such as technical setbacks, additional feature requests, or changes in market conditions that may require pivoting the project strategy.
+  \end{enumerate}
+
+\subsection{Budget Forecast}
+A detailed budget forecast will be developed, encompassing all the aforementioned cost categories. This forecast will be periodically reviewed and adjusted based on project milestones, market conditions, and actual expenditure patterns to ensure financial sustainability and efficient resource allocation.
+
+
+
 \lips
 \section{User Documentation and Training}
 \subsection{User Documentation Requirements}
