--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -59,11 +59,13 @@ Date 2 & 1.1 & Notes\\
 \lips
 \section{Stakeholders}
 
-\subsection{Client}
-Air Rescue Services: These organizations rely on satellite imagery to assist in critical missions like search and rescue. High-quality datasets can enhance their ability to assess disaster zones or monitor large areas efficiently, making response times quicker and saving lives. Satellite images tailored to disaster management, including flood zones or forest fires, are of particular importance to them.
-
 \subsection{Customer}
 End Clients/Customers: These stakeholders include governments, NGOs, private companies, and environmental organizations that pay for access to the labeled datasets and models. They rely on these datasets to make informed decisions in areas like environmental monitoring, urban planning, or defense-related tasks. Their satisfaction depends on the accuracy and reliability of both the data and the models provided.
+
+
+\subsubsection{Users (Data Labelers)}
+Data labelers are a core group of users responsible for annotating and classifying raw satellite imagery. Their role is fundamental to the project as they provide the labeled data required to train AI models. Data labelers are essential to the project's workflow, bridging the gap between raw data and actionable insights for stakeholders. Their contributions not only shape the quality of the AI models but also impact the effectiveness of the end clients decision-making processes.
+
 
 \subsection{Other Stakeholders}
 Beyond the primary stakeholders, other key groups that benefit from high-quality satellite imagery datasets include:
@@ -88,7 +90,7 @@ Users: These are individuals or entities responsible for labeling the data on th
 \subsection{Priorities Assigned to Users}
 The importance of stakeholders can be prioritized based on their reliance on accurate and reliable datasets:
 \begin{itemize}[leftmargin=2cm]
-    \item \textbf{High Priority:} End Clients/Customers, Users (Data Labelers).
+    \item \textbf{High Priority:} End Clients/Customers.
     \item \textbf{Medium Priority:} Air Rescue Services, Alternative Financial Data Companies.
     \item \textbf{Low Priority:} Urban Planners, Defense Agencies, Environmental Agencies.
 \end{itemize}
