checking if code reviwers work

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -514,11 +514,11 @@ graduate attribute of Lifelong Learning.  Please answer the following questions:
   application, or software engineering knowledge, mechatronics knowledge or
   computer science knowledge.  Skills may be related to technology, or writing,
   or presentation, or team management, etc.  You should look to identify at
-  least one item for each team member.
+  least one item for each team member. --> TESTING
   \item For each of the knowledge areas and skills identified in the previous
   question, what are at least two approaches to acquiring the knowledge or
   mastering the skill?  Of the identified approaches, which will each team
-  member pursue, and why did they make this choice?
+  member pursue, and why did they make this choice? --> TESTING
 \end{enumerate}
 
 \end{document}
