--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -178,7 +178,7 @@ involved in the Project}
 \begin{itemize}
   \item \textbf{Description:} The system shall allow a customer to request satellite images for a given geographic area, as designated using a specified geographic coordinate system.
   \item \textbf{Rationale:} If customers do not have images for the area they would like to be analyzed, they can request the system to source them on their behalf. They system may not be able to fulfill the request.
-  \item \textbf{Fit Criterion:} After logging in and after the initiation of a service request, customers can request the system locate images from external providers by providing geographic coordinates.
+  \item \textbf{Fit Criterion:} After logging in and after the initiation of a service request, customers can request the system to locate images from external providers by providing geographic coordinates.
 \end{itemize}
 \subsubsection*{FR8}
 \begin{itemize}
