Small spelling correction

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -274,7 +274,7 @@ The use case diagram depicted below identifies the boundaries between the users 
 \textbf{Trigger:} Labeler selects a listed project\\
 \textbf{Success Scenario:}
 \begin{enumerate}
-    \item The same as Annotate Images, but the labeler must classify what category an satellite image belongs to given several options
+    \item The same as Annotate Images, but the labeler must classify what category a satellite image belongs to given several options
 \end{enumerate}
 \textbf{Post-condition:} All submitted annotated satellite images are stored by the system. The labeler's reward balance is updated to reflect their submissions
 
