--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -93,7 +93,7 @@ Data labelers are a core group of users responsible for annotating and classifyi
 
 \subsection{Other Stakeholders}
 Beyond the primary stakeholders, other key groups that benefit from high-quality satellite imagery datasets include:
-\begin{itemize}[leftmargin=2cm]
+\begin{itemize}
     \item \textbf{Defense Agencies:} Rely on tailored data for surveillance, intelligence, and threat detection to enhance national security.
     \item \textbf{Environmental Agencies:} Use satellite data to monitor ecosystems, track deforestation, and respond to climate change.
     \item \textbf{Urban Planners:} Leverage data to manage land use, plan infrastructure development, and promote sustainable growth in cities.
@@ -105,7 +105,7 @@ Beyond the primary stakeholders, other key groups that benefit from high-quality
 Users: These are individuals or entities responsible for labeling the data on the platform. In return for their efforts, they receive compensation. Their primary role is to ensure that the datasets are correctly annotated according to specified requirements, which forms the basis of the models developed. Their work directly impacts the quality and usability of the final product.
 
 \subsection{Personas}
-\begin{itemize}[leftmargin=2cm]
+\begin{itemize}
     \item \textbf{Air Rescue Analysts:} Use satellite imagery to assist in disaster management.
     \item \textbf{Financial Data Analysts:} Utilize satellite data for economic trend analysis.
     \item \textbf{Farmers/Agricultural Managers:} Monitor crop health, soil conditions, and weather for precision farming.
@@ -113,7 +113,7 @@ Users: These are individuals or entities responsible for labeling the data on th
 
 \subsection{Priorities Assigned to Users}
 The importance of stakeholders can be prioritized based on their reliance on accurate and reliable datasets:
-\begin{itemize}[leftmargin=2cm]
+\begin{itemize}
     \item \textbf{High Priority:} End Clients/Customers.
     \item \textbf{Medium Priority:} Air Rescue Services, Alternative Financial Data Companies.
     \item \textbf{Low Priority:} Urban Planners, Defense Agencies, Environmental Agencies.
@@ -158,7 +158,7 @@ involved in the Project}
 \section*{5 Relevant Facts and Assumptions}
 
 \subsection*{5.1 Relevant Facts}
-\begin{itemize}[leftmargin=2cm]
+\begin{itemize}
     \item \textbf{Increasing Demand for Satellite Data}: There is a growing need for accurate satellite imagery across various industries, such as agriculture, disaster response, urban planning, and environmental monitoring, driven by advancements in technology and data analysis.
     \item \textbf{Advances in AI and Computer Vision}: The rapid development of AI and computer vision techniques has made it possible to analyze and extract meaningful insights from large-scale satellite imagery more efficiently than before.
     \item \textbf{High Cost of Manual Data Labeling}: Traditional data labeling is labor-intensive, costly, and requires expert knowledge in some cases, which slows down the process of dataset creation and model training.
@@ -167,7 +167,7 @@ involved in the Project}
 \end{itemize}
 
 \subsection*{5.2 Business Rules}
-\begin{itemize}[leftmargin=2cm]
+\begin{itemize}
     \item \textbf{Data Privacy and Confidentiality}: No confidential information is currently protected, but IP may need protection in the future as the project evolves.
     \item \textbf{Apache License 2.0 Usage}: The project will use the Apache License 2.0, allowing others to use and modify the software freely, with payment required if used commercially.
     \item \textbf{Stakeholder Communication Protocols}: There will be established communication protocols, including weekly team meetings, regular updates, and documentation of all key communications with stakeholders.
@@ -176,7 +176,7 @@ involved in the Project}
 \end{itemize}
 
 \subsection*{5.3 Assumptions}
-\begin{itemize}[leftmargin=2cm]
+\begin{itemize}
     \item \textbf{Labelers Have Reliable Internet Access}: It is assumed that all users participating in labeling have stable and sufficient internet connectivity to access the platform, label data, and interact with the system without major disruptions.
     \item \textbf{Positive User Experience Will Attract and Retain Labelers}: The platform will rely on the assumption that a smooth user interface, fair compensation, and clear instructions will be enough to attract a substantial user base of labelers and keep them engaged over time.
     \item \textbf{Availability of Suitable Satellite Imagery}: It is assumed that high-resolution, relevant satellite images will be readily available from commercial or open-source providers to populate the platform and support various labeling tasks.
